# sctp-examples

./: .gitignore  CMakeDetermineGoCompiler.cmake  CMakeGoCompiler.cmake.in  CMakeGoInformation.cmake  CMakeLists.txt  LICENSE.txt  README.md
echo/c/: .gitignore  CMakeLists.txt
echo/c/sctp/: CMakeLists.txt
echo/c/sctp/client-sctp_sendv/: CMakeLists.txt  echoClient.c
echo/c/sctp/client-sendmsg/: CMakeLists.txt  echoClient-deprecated.c  echoClient.c
echo/c/sctp/server-recvmsg/: CMakeLists.txt  echoServer-deprecated.c  echoServer.c
echo/c/sctp/server-sctp_recvv/: CMakeLists.txt  echoServer.c
echo/c/tcp/: CMakeLists.txt  common.h
echo/c/tcp/client/: CMakeLists.txt  echoClient.c
echo/c/tcp/server/: CMakeLists.txt  echoServer.c  echoServer.h
include/: myutil.h
multi_echo/c/sctp/: CMakeLists.txt
multi_echo/c/sctp/client/: multiEchoSCTPClient.c  multiEchoSCTPClient.h
multi_echo/c/sctp/client-sctp_sendv/: CMakeLists.txt  echoClient.c
multi_echo/c/sctp/server/: multiEchoSCTPServer.c
multi_echo/c/sctp/server-sctp_recvv/: CMakeLists.txt
multi_echo/c/tcp/: CMakeLists.txt
multi_echo/c/tcp/client/: CMakeLists.txt  echoClient.c  multiEchoTCPClient.c  multiEchoTCPClient.h
multi_echo/c/tcp/server/: CMakeLists.txt  multiEchoTCPServer.c
multi_echo/go/sctp/: CMakeLists.txt
multi_echo/go/sctp/client/: simpleEchoSCTPClient.go
multi_echo/go/tcp/: CMakeLists.txt
multi_echo/go/tcp/client/: EchoClient.go
multi_echo/go/tcp/server/: multiEchoTCPServer.go
simple/c/sctp/: CMakeLists.txt  README.md
simple/c/sctp/client_sendv/: simpleSCTPClient_sctp_sendv.c
simple/c/sctp/server_recvv/: simpleSCTPServer_sctp_revv.c
simple/c/tcp/: CMakeLists.txt
simple/c/tcp/client/: simpleEchoTCPClient.c
simple/c/tcp/server/: simpleEchoTCPServer.c
simple/go/sctp/: CMakeLists.txt
simple/go/sctp/client/: simpleSCTPClient.go
simple/go/sctp/server/: simpleEchoSCTPServer.go  simpleSCTPServer.go
simple_echo/c/sctp/: CMakeLists.txt
simple_echo/c/sctp/client/: simpleEchoSCTPClient.c  simpleEchoSCTPClient.h
simple_echo/c/sctp/client_sendmsg/: simpleEchoSCTPClientSendmsg.c
simple_echo/c/sctp/client_sendv/: simpleEchoSCTPClient_sctp_sendv.c
simple_echo/c/sctp/server_recvmsg/: simpleEchoSCTPServerRecvmsg.c
simple_echo/c/sctp/server_recvv/: simpleEchoSCTPServer.c  simpleEchoSCTPServer.h
simple_echo/c/tcp/: CMakeLists.txt
simple_echo/c/tcp/client/: simpleEchoTCPClient.h
simple_echo/c/tcp/server/: simpleEchoTCPServer.c  simpleEchoTCPServer.h
simple_echo/go/sctp/: CMakeLists.txt
simple_echo/go/sctp/client/: EchoClient.go  SimpleClient.go
simple_echo/go/sctp/server/: EchoSCTPServer.go  SimpleServer.go
src/: myutil.c
